# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "docker-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2018"
resolver = "2"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "~0.11", features = ["json", "stream"] }         # http requests
bytes = "1.1.*"                                                        # helps wrap responses from reqwest
tokio = { version = "~1.18", features = ["full"] }                     # async http requests
libc = "~0.2"                                                          # for syscalls like chroot
serde = { version = "~1.0", features = ["derive"] }                    # for json mangling
serde_json = "~1.0"                                                    # for json mangling
tempfile = "~3.3"
unshare = "~0.7"
anyhow = "~1.0"
tokio-tar = "~0.3"
async-compression = { version = "~0.3", features = ["tokio", "gzip"] }
tokio-util = { version = "~0.7", features = ["compat"] }
futures = "~0.3"
